# trimesh

./: .appveyor.yml  .buildinfo  .dockerignore  .gitignore  .travis.yml  AI_POLICY.md  AI_PREFERENCE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.html  README.md  azure-pipelines.yml  codecov.yml  colors.html  contributing.html  curvature.html  docker.html  examples.html  formats.html  genindex.html  index.html  install.html  mesh_generation.py  mesh_render.py  nearest.html  nricp.html  obj.py  objects.inv  py-modindex.html  pyproject.toml  quick_start.html  ray.html  raytracing.py  requirements.txt  search.html  searchindex.js  (+123 more)
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr_policy.yml  publish.yml  pythonpublish.yml  release.yml  test.yml
_sources/: README.rst.txt  colors.rst.txt  contributing.md.txt  curvature.rst.txt  docker.md.txt  examples.rst.txt  index.rst.txt  install.md.txt  nearest.rst.txt  nricp.md.txt  quick_start.rst.txt  ray.rst.txt  section.rst.txt  shortest.rst.txt  texture.rst.txt  trimesh.base.rst.txt  trimesh.boolean.rst.txt  trimesh.bounds.rst.txt  trimesh.caching.rst.txt  trimesh.collision.rst.txt  trimesh.comparison.rst.txt  trimesh.constants.rst.txt  trimesh.convex.rst.txt  trimesh.creation.rst.txt  trimesh.curvature.rst.txt  trimesh.decomposition.rst.txt  trimesh.exceptions.rst.txt  trimesh.exchange.binvox.rst.txt  trimesh.exchange.cascade.rst.txt  trimesh.exchange.dae.rst.txt  trimesh.exchange.export.rst.txt  trimesh.exchange.gltf.extensions.rst.txt  trimesh.exchange.gltf.rst.txt  trimesh.exchange.load.rst.txt  trimesh.exchange.misc.rst.txt  trimesh.exchange.obj.rst.txt  trimesh.exchange.off.rst.txt  trimesh.exchange.ply.rst.txt  trimesh.exchange.rst.txt  trimesh.exchange.stl.rst.txt  (+89 more)
_static/: documentation_options.js  pygments.css
container/: Dockerfile  apt.list  graphtool.list
container/full/: Dockerfile  apt.bash  apt.list  built.bash  conda.bash  graphtool.key  pip.bash
container/minimal/: Dockerfile  apt.bash  apt.list  conda.bash
docker/: Dockerfile  apt-trimesh  binvox.bash  draco.bash  embree.bash  embree3.bash  gltfvalidator.bash  openctm.bash  pandoc  trimesh-setup
docker/builds/: apt-trimesh  apt.bash  binvox.bash  builds.bash  conda.bash  draco.bash  embree.bash  geos.bash  gltf_validator.bash  llvm.bash  mesa.bash  openctm.bash  pandoc.py  spatialindex.bash  vhacd.bash
docker/config/: xvfb.supervisord.conf
docker/full/: Dockerfile  built.bash  conda.bash
docs/: Makefile  README.rst  build.py  conf.py  contributing.md  coverage_badge.py  docker.bash  docker.md  examples.md  examples.py  examples.rst  examples.template  index.rst  install.md  install.rst  modules.rst  requirements.txt  trimesh.interfaces.rst  trimesh.io.rst  trimesh.path.io.rst  trimesh.path.rst  trimesh.ray.rst  trimesh.resources.rst  trimesh.rst  trimesh.scene.rst
docs/_static/: custom.css
docs/content/: contributing.md  formats.md  index.rst  install.md  nricp.md
docs/guides/: docker.md  nricp.md
docs/static/: coverage.css
docs/templates/: module.rst_t  package.rst_t
examples/: colors.ipynb  convexify.py  curvature.ipynb  integrate.ipynb  nearest.ipynb  nearest.py  nricp.py  offscreen_render.py  outlined.py  pick_vertex.py  prepare.py  quick_start.ipynb  ray.ipynb  ray.py  raytrace.py  save_image.ipynb  save_image.py  scan_register.py  section.ipynb  section.py  shortest.ipynb  shortest.py  sinter.py  stl_import_with_mixed_case_names.py  texture.ipynb  view_callback.py  viewcallback.py  voxel.py  voxel_fillers.py  voxel_silhouette.py  widget.py
examples/dockerRender/: Dockerfile  README.md  render.py  render.supervisor.conf
examples/docker_render/: Dockerfile  README.md  render.py
helpers/: Dockerfile  run_typecheck.py  trimesh-setup
helpers/notebook_viewer/: README.md  compile.py  load_base64.js  update.bash  viewer.html
models/: 1002_tray_bottom.STL  20mm-xyz-cube.stl  7_8ths_cube.stl  ADIS16480.STL  AlphaBlendModeTest.glb  BoxTextured.ply  FM1_satellite.3DXML  Mesh_PrimitiveMode_04.gltf  P_XPM_0331_01.3mf  TestScene.gltf  angle_block.STL  barrett-wam.zae  blocks.3dxml  blue_cube.dae  boolean.glb  box.STL  box.mtl  box_sides.STEP  bunny.ply  busted.STL  capsule.mtl  chair_model.binvox  comments.off  counter.unitsmm.STL  counterX.3MF  counterXP.3MF  cube.glb  cube1.3dxml  cube_and_sphere_same_name.3mf  cube_blender_uv.ply  cube_blender_uv_meshlab.ply  cube_invalid_shininess.dae  cubevc.glb  cycloidal.3DXML  cycloidal.ply  cylinder.stl  empty.ply  empty.stl  empty_nodes.glb  featuretype.3MF  (+61 more)
models/2D/: 1002_tray_bottom.DXF  125_aluminum_srcMH.DXF  125_cycloidal.DXF  250_cycloidal.DXF  ChuteHolderPrint.DXF  LM2.dxf  angle_test.dxf  apu-mount.DXF  bigarc_r14.dxf  broken_loop.dxf  broken_pair.dxf  buffer_regions.dxf  (+13 more)
templates/: collada_template.dae  collada_template_dev.dae
tests/: basic.list  corpus.py  generic.py  notebook_run.py  notebooks.py  path_tests.py  plane.xaml  profile_mesh.py  regression.py  scene_tests.py  test_3dxml.py  test_3mf.py  test_adjacency.py  test_align.py  test_arc.py  test_assimp.py  test_base.py  test_binvox.py  test_boolean.py  test_bounds.py  test_cache.py  test_camera.py  test_collision.py  test_color.py  test_convex.py  test_copy.py  test_crash.py  test_creation.py  test_curvature.py  test_dae.py  test_decomposition.py  test_depr.py  test_dxf.py  test_edges.py  test_encoding.py  test_entities.py  test_entity.py  test_except.py  test_exchange.py  test_expansion.py  (+98 more)
trimesh/: __init__.py  __main__.py  base.py  boolean.py  bounds.py  caching.py  collision.py  color.py  comparison.py  constants.py  convex.py  corpus.py  creation.py  curvature.py  decomposition.py  exceptions.py  fem.py  geometry.py  graph.py  graph_ops.py  grouping.py  inertia.py  integrate.py  intersections.py  interval.py  io.py  iteration.py  mesh3D.py  mesh_base.py  mesh_generation.py  mesh_io.py  mesh_render.py  meshers.py  nearest.py  nsphere.py  optimize.py  parent.py  permutate.py  points.py  poses.py  (+25 more)
unit_tests/: mass_properties.json  trimesh_tests.py
(+277 files in other folders)
